--- a/Tesi pf/content.tex
+++ b/Tesi pf/content.tex
@@ -1,10 +1,68 @@
 % !TeX spellcheck = it_IT
+\frontmatter
+\setcounter{page}{1}
+\pagenumbering{Roman}
+\tableofcontents
 \chapter{Introduzione}
+aha ciaoo
+\mainmatter
+\setcounter{page}{1}
+\pagenumbering{arabic}
+\pagestyle{fancy}
+\makeatletter
+\let\ps@plain\ps@fancy
+\makeatother
 \chapter{Cenni biografici}
-Paul Bley nacque a Montreal, in Canada, il 10 Novembre 1932. I genitori adottivi furono Betty Marcovitch, emigrata rumena di modeste origini, e il facoltoso imprenditore tessile Joe Bley\footcite[10]{stopping}. Paul era in verità figlio biologico di Joe e di una sua dipendente (una donna del Canada francese di nome Lucie): dal momento che Betty non poteva avere figli, Bley fece mettere il neonato in orfanotrofio per convincere poi la moglie, ignara della situazione, ad adottarlo; la madre biologica di Paul venne poi assunta come balia dalla famiglia. Lo stesso Paul non sarebbe venuto a conoscenza di questo fatto fino a molti anni dopo, nel 1992\footcite[13]{stopping}. La madre adottiva, in ogni caso, crebbe il bambino con affetto e cura, decidendo di impartirgli un'educazione musicale e di fargli frequentare la scuola della comunità ebraica di Montreal.\\
-La rivelazione del fatto di essere stato adottato (nonostante entrambi i genitori biologici fossero in realtà presenti) fu un evento traumatico per il bambino, spingendolo a rifugiarsi nella musica per colmare la mancanza di un senso di appartenenza. Il divorzio dei genitori aggiunse ulteriore stress sul giovane Paul, che ricorda come in quegli anni (anche grazie al suo insegnante August Dècarie) maturò in lui la decisione di diventare un musicista professionista\footcite[15]{stopping}. Sempre in quel periodo Paul ebbe il suo primo contatto con il concetto di improvvisazione:
+\section{Montreal: l'infanzia e gli inizi}
+Paul Bley nacque a Montreal, in Quebec, il 10 Novembre 1932. I genitori adottivi furono Betty Marcovitch, emigrata rumena di modeste origini, e il facoltoso imprenditore tessile Joe Bley\footcite[10]{stopping}. Paul era in verità figlio biologico di Joe e di una sua dipendente (una donna del Canada francese di nome Lucie): dal momento che Betty non poteva avere figli, Bley fece mettere il neonato in orfanotrofio per convincere poi la moglie, ignara della situazione, ad adottarlo; la madre biologica di Paul venne poi assunta come balia dalla famiglia. Lo stesso Paul non sarebbe venuto a conoscenza di questo fatto fino a molti anni dopo, nel 1992\footcite[13]{stopping}. La madre adottiva, in ogni caso, crebbe il bambino con affetto e cura, decidendo di impartirgli un'educazione musicale e di fargli frequentare la scuola della comunità ebraica di Montreal.\par
+La rivelazione del fatto di essere stato adottato (nonostante entrambi i genitori biologici fossero in realtà presenti nel suo nucleo familiare) fu un evento traumatico per il bambino, tanto più che allo stress causato dalla situazione si aggiunse quello provocato dal divorzio dei genitori nel 1939. Il giovane Paul, per far fronte alla mancanza di un senso di appartenenza, trovò così rifugio nella musica e non a caso il pianista ricorda come in quegli anni (anche grazie al suo insegnante August Dècarie) maturò in lui la decisione di diventare un musicista professionista\footcite[15]{stopping}. Sempre in quel periodo Paul ebbe il suo primo contatto con il concetto di improvvisazione:
 \begin{fquote}
-	Oltre alla scuola, stavo iniziando a studiare per il mio Bar Mitzvah, per il quale avrei dovuto cantare un testo in ebraico. Quando chiesi al mio rabbino ``Come fa la melodia?'' egli rispose ``Inventala sul momento''.
-	\end{fquote}
+	Oltre alla scuola, stavo iniziando a studiare per il mio Bar Mitzvah per il quale avrei dovuto cantare un testo in ebraico. Quando chiesi al mio rabbino ``Come fa la melodia?'' egli rispose ``Inventala sul momento\footnote{\cite[16]{stopping}. Le traduzioni dall'inglese di questo (e altri) documenti in questo elaborato sono proprie.}''.
+\end{fquote}
+Giovanissimo, Bley trova impiego come pianista di varietà al locale della Young Men's Hebrew Association dove venne in contatto con le strutture e le sonorità della musica popolare. Viene in seguito assoldato da altri locali in cui spesso è chiamato a suonare anche con musicisti molto più anziani di lui.
+A quattordici anni forma il suo primo gruppo, i \textit{Buzzy Bley}: l'esperienza gli permette di iniziare a farsi conoscere a Montreal e di sviluppare la capacità di gestire, economicamente ed artisticamente, un gruppo di musicisti. \\
+Il contatto con il jazz avvenne con la \textit{tramp band} di Al Cowan\footnote{Al Cowan (asse da bucato), B.T. Lundy (sax tenore), Buddy Jordan (tromba), Walter Bacon (batteria). Le \textit{tramp band} erano complessi da intrattenimento che suonavano spesso strumenti bizzari quali, per l'appunto, l'asse da bucato.}, alle cui esibizioni Bley spesso assisteva dopo aver finito di suonare nei locali in cui era ingaggiato. Il gruppo spesso invitava il giovane pianista a suonare e Bley ricorda le dinamiche di apprendimento che venivano a formarsi in quei contesti, tra nottate in locali frequentati da giocatori d'azzardo e prostitute.\par
+Nel 1948 Bley potè assistere a un concerto del pianista suo concittadino Oscar Peterson, che nonostante avesse all'epoca solo ventitrè anni già mostrava i segni di un talento geniale e fuori dalla norma, come già all'epoca riconosciuto da Bley\footcite[20]{stopping}. Peterson, a sua volta, rimase impressionato da Bley tanto da chiedergli, alle porte della sua partenza per gli Stati Uniti nel 1949, di sostituirlo come pianista per finire il suo contratto all'Alberta Lounge con il suo bassista e il suo batterista\footnote{Rispettivamente Ozzie Roberts e Clarence Jones.}. Questa fu solo una delle prime fortuite occasioni che, peculiarmente, sarebbero state una costante della vita di Bley. Egli, a suo merito, seppe sempre sfruttarle in maniera congrua.\\
+Suonando allo Chalet Hotel Bley venne in contatto con la cantante newyorkese Nina Grey, che lo spinse e lo supportò insieme alla madre Betty nel seguire il proprio sogno di trasferirsi a New York per frequentare la Juilliard School per la musica e le arti a Manhattan. \par
+\section{New York e la Juilliard: le prime esperienze}
+Nel 1950 Bley si trasferì dunque a New York, dove poté immergersi nella florida scena jazzistica dell'epoca ascoltando le esibizioni di nomi di primissimo rilievo come Charlie Parker, Max Roach, Miles Davis ma anche Lennie Tristano, Lee Konitz e Billy Bauer.\\
+Alla Juilliard Bley riceve un'educazione di impostazione moderna, soprattutto in ambito compositivo\footcite[23]{stopping}. Questi anni formativi lasciarono un'impronta profonda sulla sua concezione di tempo, tonalità e soprattutto sul rifiuto della dicotomia, tipica del jazz di quegli anni, di compositore-esecutore.
+\begin{fquote}
+	Il grande mistero non era se sarebbe arrivata la musica atonale, ma bensì \textit{perchè non fosse ancora arrivata}. [...] A questo riguardo la musica classica ci aveva portati fuori strada, poiché ci aveva spinti a credere che questa svolta sarebbe stata compiuta dai compositori. Nel jazz [...] un compositore è semplicemente qualcuno che non sa suonare in tempo reale.\footcite[24]{stopping}
+\end{fquote}
+L'atonalità esercitò da subito il proprio fascino su Bley così come su altri musicisti della scuola (come Gil Evans, George Russell e Johnny Carisi che il pianista ebbe modo di conoscere). Alla Juilliard Bley si unì alla \textit{New Jazz Society}, che si riuniva al Downbeat Club dove erano soliti suonare Parker e Charles Mingus. Quest'ultimo, in particolare, fece la conoscenza di Bley proprio in queste occasioni.\\
+Durante questo periodo, chiaramente, Bley non si fece mancare numerosi ingaggi sopratutto a Brooklyn e a Long Island\footcite[47]{cappelletti} dove cementò la sua familiarità con figure quali il già citato Parker, Jackie McLean e Donald Byrd; grazie al suo manager Monte Kay suonò inoltre per diversi mesi con Lester Young\footcite[47]{cappelletti}.\par
+Nonostante la fruttuosa permanenza a New York, Bley non abbandonò completamente Montreal, dividendo la propria vita tra le due città negli anni tra il 1950 e il 1953. Nella città canadese Bley si organizzò insieme ad altri due pianisti suoi concittadini, Keith White e Art Roberts, per dare forma al Jazz Workshop. Lo scopo dell'associazione era quello di creare un ambiente di sperimentazione e sviluppo e allo stesso tempo quello di iniettare nuova vita nella scena di Montreal chiamando illustri ospiti da oltre il confine. Si trattò di un'altra azione ``imprenditoriale'' da parte di Bley che durante la sua vita dimostrò sempre una certa inclinazione verso gli aspetti più gestionali della vita del musicista. Tra gli ospiti statunitensi ospitati dal Workshop ci furono Chuck Wayne, Sonny Rollins, Jackie McLean, Art Taylor e, nel 1953, perfino Charlie Parker. Il successo riscosso dell'associazione attirò l'attenzione della televisione canadese CBC che ne trasmise in diretta diversi concerti, compreso quello in cui prese parte Parker\footnote{Queste registrazioni sono disponibili nel disco \textbf{Charlie Parker - \textit{Montreal 1953}} [Uptown Records 1993]. Questo album, nelle tracce 9, 10, 11 e 12 contiene la prima registrazione del pianoforte di Bley, con Neil Michaud (basso), Ted Paskert (batteria), Dick Garcia (chitarra) e Brew Moore (sax tenore).}. Bley ricorda la differenza tra la scena di Montreal, in cui i musicisti esperti si facevano paternalmente carico dell'istruzione di quelli più giovani, e quella di New York. ``\textit{I giovani musicisti non si consideravano discepoli e la conoscenza dei musicisti più anziani era disponibile solo in vendita. Se volevo che Charlie Parker suonasse con me dovevo ingaggiarlo}\footcite[31]{stopping}''. A riprova della sua inclinazione manageriale, Bley si fece carico di scortare un Parker stralunato e ormai in preda alla propria tossicodipendenza da New York a Montreal (temendo che si sarebbe perso in aeroporto e sarebbe finito in Alaska). Parker deve aver apprezzato il pianismo di Bley, poichè lo richiamò in seguito per un ingaggio a Brooklyn\footcite[34]{stopping}. L'esperienza con Parker segnò profondamente Bley, che rimase profondamente colpito da come il sassofonista riuscisse a ``\textit{prevedere ciò che stava arrivando e pensare sempre in anticipo}''\footcite[35]{stopping}.\par
+Nel 1953 Charles Mingues chiamò Bley per una registrazione come direttore d'orchestra\footnote{Composta da Janet Thurlow (voce), Charles Mingus (basso), Kenny Clarke (batteria), John Lewis (pianoforte), Ernie Royal (tromba), Danny Bank (sax baritono), Willy Dennis (trombone), Eddie Caine (sax contralto e flauto), Teo Macero (sax tenore) e Jackson Wiley (violoncello).} per alcuni pezzi nel contesto di un progetto della neonata etichetta discografica di proprietà di Mingus, la Debut Records. A questo ingaggio Mingus aggiunse un'ulteriore registrazione in trio con Art Blakey. Quest'ultima prova, pubblicata come \textbf{Paul Bley - \textit{Introducing Paul Bley}} [Debut 1954] nonostante la \textit{line-up} di primo livello appare piuttosto sbiadita e priva di carica, tanto che Cappelletti insinua che fosse stata proposta da Mingus più come forma di ringraziamento per il lavoro di direzione di orchestra che come dichiarazione di fiducia nelle doti pianistiche di Bley\footcite[49]{cappelletti}.\par
+\section{L'esperienza free: Coleman, Russell, Giuffre, Rollins}
+Nel 1955 Bley ricevette un ingaggio da Chet Baker per un tour di esibizioni ad Hollywood; nel 1956 venne chiamato dalla cantante Dakota Staton per poi iniziare un tour del Midwest americano con Lennie McBrown (batteria) e Hal Gaylor (basso a cinque corde)\footcite[49]{stopping}. Nello stesso anno al Birdland di New York fece la conoscenza di Karen Borg (destinata a diventare nota come Carla Bley e a essere, per un periodo, moglie di Paul), che all'epoca lavorava nel locale come cameriera. \\
+In generale quello in California fu un periodo molto intenso per Bley, tanto che nel 1957 ebbe un malore e fu ricoverato per un'emorragia interna causata da un'ulcera duodenale. Bley attribuisce\footcite[54]{stopping} l'episodio al suo continuo stato di irrequietezza, nato con la rivelazione di essere stato adottato, che lo spingeva a trascurare la propria salute fisica e mentale a vantaggio degli impegni lavorativi. In seguito all'episodio Bley sostiene di aver realizzato la maggiore importanza dello stato artistico della musica jazz rispetto alla propria carriera individuale. Dopo il ricovero Bley viene raggiunto a Los Angeles da Karen Borg, con la quale aveva iniziato una relazione da qualche tempo, per poi sposarsi e stabilirsi in California.\par
+Nel 1957 ottenne un ingaggio all'Hillcrest Club sul Washington Boulevard a Los Angeles con Gaylor e McBrowne a cui si aggiunse Dave Pike (vibrafono). Parallelamente approfondisce inoltre la strada dell'improvvisazione libera in duo con il trombettista Herbie Spanier\footcite[58]{stopping}. Dovendo sostituire Gaylor, che aveva deciso di trasferirsi a est, McBrowne presentò a Bley il contrabbassista Charlie Haden. Ricorda Bley: ``\textit{Charlie arrivò scalzo. Non solo non aveva le scarpe, ma anche la sua scelta di note lasciava abbastanza a desiderare. Il suo modo di tenere il tempo era impeccabile [...] sarebbe stato facile trovare un altro bassista che suonava le note corrette ma avrei dovuto essere molto fortunato per trovare un altro bassista con un senso del tempo così}\footcite[62]{stopping}''. Poco dopo anche McBrowne tornò ad est sotto ingaggio di Horace Silver e fu così sostituito da Billy Higgins che completò così la sezione ritmica. Una sera quest'ultimo propose a Bley di conoscere un trombettista e un sassofonista con cui lui e Haden stavano lavorando: si trattava, ovviamente, di Don Cherry e di Ornette Coleman.
+\begin{fquote}
+	Il fatto che fosse successo in una notte qualunque di un ingaggio di due anni fu una sorpresa, ma non servì più di un secondo per capire che quello era l'anello mancante tra suonare in maniera totalmente \textit{free}, senza vincoli di sorta, e suonare \textit{bebop} con cambi di accordi e tempo stabile.\footcite[64]{stopping}
+\end{fquote}
+Bley iniziò così la sua esperienza con Coleman (che gli sarebbe costata il posto di lavoro all'Hillcrest\footcite[51]{cappelletti}) esplorando diverse concezioni di tempo, struttura (Bley aveva sempre mal sopportato la ridondanza di sezioni A e B nella forma canzone tradizionale) e armonia. Parte di queste performance, che Bley registrava su nastro, sono documentate dai dischi \textbf{\textit{The Fabulous Paul Bley Quintet}} [America Records 1970] e \textbf{\textit{Ornette Classics 1}} [Improvising Artists 1977]. \par
+Dopo un breve ingaggio con Scott LaFaro (basso), Bobby Hutcherson (vibrafono) e Larance Marable (batteria), Carla e Paul tornarono a New York nel 1959 dove la fama di Coleman precedeva il nome di Bley\footcite[70]{stopping}. Nel 1960 venne chiamato da George Russell, che aveva avuto modo di ascoltare Bley qualche tempo addietro alla Lenox School of Jazz, per un progetto di un pezzo per due pianoforti e Orchestra per la Decca Records in quello che sarebbe poi uscito con il titolo di \textit{\textbf{Jazz in the Space Age}} [Decca 1960]. Compositore affermato, Russell aveva concepito una teoria armonica basata sulla \textit{gravità tonale}\footcite[3]{russell} e su un'organizzazione tonale incentrata sul cromatismo interpretato come naturale estensione della serie armonica\footcite[12]{russell}, prospettiva che senza dubbio ben si complementava con la fuga dalla tonalità (benchè Russell di fatto proponesse un \textit{rafforzamento} parossistico del concetto di tonalità) che caratterizzava la musica di Coleman.\\
+L'altro pianista chiamato a realizzare il progetto era Bill Evans, in quegli anni all'apice della sua popolarità dopo le registrazioni di \textit{\textbf{A Kind Of Blue}} [Columbia 1959]. Bley racconta stupito di come questi si era inaspettatamente rivelato in sintonia con le sue idee di sperimentazione e atonalità, tanto da preoccuparsi che Evans potesse rubargli la scena e lasciarlo senza lavoro. Con suo grande sollievo, però, Bley racconta che dopo le registrazioni andò ad ascoltare il trio di Evans al Village Vanguard per scoprire che il pianista, al di là dell'esperienza con Russell, non sembrava interessato ad allontanarsi da quella che era la sua zona di comfort\footcite[75]{stopping}.\par
+In questi anni Bley conobbe il bassista Steve Swallow, con il quale si ritrovò a suonare in diverse occasioni in duo. Contestualmente, fu anche chiamato dal chitarrista Jim Hall per sostituirlo in un trio con il clarinettista e sassofonista Jimmy Giuffre e il bassista Ralph Peña. Giuffre, così come Russell, aveva avuto modo di ascoltare Bley alla Lenox School of Jazz ed era intrigato dallo stile anticonvenzionale del pianista. In seguito all'abbandono di Peña, Bley convinse Giuffre ad assumere Swallow come bassista. Soddisfatto dal suono del trio, Giuffre portò il gruppo per una (sfortunata\footcite[77]{stopping}) tournee in Europa nel 1961. Dello stesso anno sono i due dischi che documentano questa iterazione dei \textit{Jimmy Giuffre 3}, cioè \textit{\textbf{Thesis}} [Verve 1961] e \textit{\textbf{Fusion}} [Verve 1961], in cui già si nota una prevalenza di brani scritti da Carla Bley (tendenza, questa, che non avrebbe mai abbandonato Paul nemmeno dopo la separazione).\\
+In seguito a una proposta di Herbie Hancock nel 1963 Bley fu ingaggiato da Sonny Rollins insieme a Henry Grimes (basso) e Roy McCurdy (batteria) per una serie di concerti, un tour in Giappone e Stati Uniti e un disco per la RCA con Coleman Hawkins, \textit{\textbf{Sonny meets Hawk!}} [RCA Victor 1963]. A differenza delle esperienze precedenti, il repertorio di Rollins era costituito principalmente da \textit{standard} seppur suonati con grande libertà armonica e strutturale. Questa occasione diede a Bley l'opportunità di misurarsi con un ulteriore approccio al linguaggio \textit{free}: il legame tra gli \textit{standard} e il pianista sarebbe continuato anche in seguito, fino alla fine della sua carriera.
+\section{La maturità artistica: il trio e il solo}
+Nel 1964 Bley fu assoldato dal bassista Gary Peacock per una doppia serata: il primo concerto insieme a John Gilmore (sax tenore) e a Paul Motian (batteria) e il secondo con Albert Ayler (sax tenore) e Sunny Murray (batteria)\footcite[89]{stopping}. L'esperienza con Murray, primo batterista \textit{free} con cui Bley avesse mai avuto a che fare, fu allo stesso tempo rivelatrice e traumatica, tanto che Bley dovette chiedere a Carla di riscrivere i propri brani affinché si adattassero meglio allo stile del batterista. Non a caso, Bley avrebbe poi nella propria carriera prediletto lo stile più controllato di Motian. Gli sforzi di questa fase della carriera di Bley sono documentati nei dischi \textit{\textbf{Turning point}} [Improvising Artists 1975] con il primo quartetto e \textit{\textbf{Barrage}} [ESP-disk 1964] con Marshall Allen (sax contralto), Dewey Johnson (tromba), Eddie Gomez (basso) e Milford Graves (batteria).\par
+Nello stesso anno Bley fu invitato dal trombettista Bill Dixon a prendere parte agli incontri dell'associazione Jazz Composer Guild. L'idea dell'associazione era quella di formare una sorta di sindacato per opporsi alle pratiche scorrette dei \textit{leader} delle formazioni e delle etichette discografiche. Seppur riluttante all'inizio\footnote{``L'incontro era un manipolo di anime in pena. Alla faccia della terapia di gruppo...'' \cite{stopping}, p. 91.}, Bley si ritrovò insieme al trombonista Roswell Rudd alla direzione dell'associazione in seguito alla defezione di Dixon. Durante questa nuova esperienza da organizzatore e gestore Bley riuscì a produrre diversi concerti e a guadagnare nuovi membri (tra tutti, il pianista Cecil Taylor). Il nuovo successo dell'organizzazione permetteva anche a musicisti meno noti, come a quel tempo il quintetto di Carla Bley con il trombettista (e futuro marito di Carla) Mike Mantler, di godere di un'utile visibilità. In quegli anni Carla Bley, sotto consiglio di Paul, potè utilizzare i leader delle formazioni nella Jazz Composer's Guild per formare la Jazz Composer's Orchestra Association insieme a Mantler. Bley ricorda ``Un'idea così buona da costarmi una moglie''\footcite[95]{stopping}, dato che nel 1965 Paul e Carla divorziarono.\par
+In seguito alla sofferta separazione, iniziò per Bley un approfondimento della forma e delle potenzialità della formazione in trio\footcite[98]{stopping}. Il primo passo in questa direzione, \textit{\textbf{Closer}} [ESP-disk 1965] con il già citato Steve Swallow e Barry Altcschul (batteria). Per il disco Bley adottò, in controtendenza con il \textit{free} dell'epoca, la scelta di limitare la lunghezza dei soli ottenendo così una \textit{tracklist} più folta e con una maggiore varietà di temi e atmosfere\footnote{Bley, tra i cui difetti non si può certo annoverare la modestia, equipara \textit{Closer} ai dischi di Albert Ayler a livello di importanza storica per il jazz. \cite[100]{stopping}.}. Grazie al sostegno della ESP, Bley potè portare il proprio trio (con Kent Carter al basso) in Europa per un tour nello stesso anno).\par
+Nel 1966 Bley iniziò una relazione (poi in seguito matrimonio) con la compositrice e pioniera della musica elettronica Annette Peacock (ex moglie del bassista Gary Peacock). Come con Carla Bley, Peacock sarebbe divenuta una presenza molto importante nella vita personale e artistica di Bley, che avrebbe suonato sue composizioni (al pari di quelle della prima moglie) per il resto della propria carriera. Nello stesso periodo Bley e Peacock si recarono in Europa insieme ad altri nomi della scena (tra cui Steve Lacy, Altschul e Carla Bley).\\
+Paradossalmente, in Europa Bley trovò sempre un'accoglienza migliore rispetto agli stati uniti. Dopo un festival a Madrid con Altschul e Mark Levinson (basso), Bley fu invitato a Bologna da cui poi nacque un tour di sei mesi per l'Italia\footcite[102]{stopping}. Come altre personalità quali Steve Lacy e Don Cherry, Bley e Peacock risiedettero per qualche a tempo a Roma sotto l'egida del produttore RCA Alberto Alberti\footcite[104]{stopping}. Dall'esperienza nacque il disco in trio \textit{\textbf{Ramblin'}} [RCA Italia 1966]. Dopo altre esperienze sui palchi europei nello stesso anno (con cinque dischi dal vivo e in studio rilasciati durante il periodo), Bley ricorda come nella formazione in trio aveva finalmente trovato un campo espressivo in cui sentirsi libero:
+\begin{fquote}
+	Suonavo tutto io. Niente fiati. Finalmente potevo mettere in pratica le \text{mie} idee di free jazz. [...] Questo trio poteva aprire le finestre e dare ossigeno a tradizioni che avevano raggiunto un blocco.\footcite[106]{stopping}
+\end{fquote}
+
+
+
+
+
+
+
+\addcontentsline{toc}{chapter}{Appendice: materiale trascritto}
+\addcontentsline{toc}{section}{All the things you are}
 \appendix
 \includepdf[pages=-,pagecommand={},scale=0.9]{things_vanilla}
