--- a/Tesi pf/main.tex
+++ b/Tesi pf/main.tex
@@ -1,6 +1,6 @@
 
-\documentclass[]{book}
-\usepackage{iccr2024}
+\documentclass[openany,oneside]{book}
+\input{iccr2024.sty}
 \usepackage{pdfpages}
 
 %%%%%% add your extra packages here (if needed)                                        %%%%%
@@ -44,11 +44,11 @@
 
 % dummy_content.tex shows how to add sections, figures, tables, formulas, and references
 % remove the following line, it just adds dummy content
-\tableofcontents
 \input{content}
 
 
 %-------------------------------------------------------------------------------------------
+\input{discografia}
 \printbibliography
 
 \end{document}
