--- a/Tesi pf/references.bib
+++ b/Tesi pf/references.bib
@@ -17,3 +17,31 @@
 	New Zealand},
 	date = {2002}
 }
+@book{grove,
+	author = {Barry Kernfeld},
+	title = {The New Grove Dictionary Of Jazz},
+	date = {2002},
+	publisher = {Oxford University Press}
+}
+@article{edsarath,
+	ISSN = {00222909},
+	URL = {http://www.jstor.org/stable/843921},
+	author = {Ed Sarath},
+	journal = {Journal of Music Theory},
+	number = {1},
+	pages = {1--38},
+	publisher = {[Duke University Press, Yale University Department of Music]},
+	title = {A New Look at Improvisation},
+	urldate = {2025-02-06},
+	volume = {40},
+	year = {1996}
+}
+@book{russell,
+	author = {George Russell},
+	title = {Lydian Chromatic concepts of Tonal Organizations},
+	date = {2001},
+	publisher = {Concept Publishing Company}
+}
+
+
+
